# ros

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bot_controller/lib/bot_controller/: simple_controller.py
install/bot_controller/share/bot_controller/: local_setup.dsv  local_setup.sh  package.sh  package.xml
install/bot_description/share/bot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/bot_msgs/share/bot_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/controller/share/controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ros_c/share/ros_c/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros_cpp/lib/ros_cpp/: publisher  subscriber
install/ros_cpp/share/ros_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  (+2 more)
log/: latest_build
src/bot_controller/: CMakeLists.txt  package.xml
src/bot_controller/config/: bot_controller.yaml  stick_config.yaml
src/bot_controller/launch/: controller.launch.py
src/bot_description/: CMakeLists.txt  package.xml
src/bot_description/launch/: gazebo.launch.py
src/bot_description/rviz_model/: display.rviz
src/bot_description/urdf/: bot.urdf  bot.urdf.xacro  bot.xacro  bot_control.xacro  bot_gazebo.xacro
src/bot_msgs/: CMakeLists.txt
src/controller/: package.xml
src/ros_c/: CMakeLists.txt
src/ros_cpp/: CMakeLists.txt
src/ros_cpp/src/: publisher.cpp  subscriber.cpp
src/ros_python/: package.xml  setup.py
src/ros_python/ros_python/: parameter.py  service_server.py  tf_kinematics.py
(+99 files in other folders)
